fixing alignment on project modal

--- a/css/agency.css
+++ b/css/agency.css
@@ -320,6 +320,10 @@ header.masthead .intro-text .intro-heading {
   text-align: left;
 }
 
+.portfolio-modal .modal-content a {
+  text-align: center;
+}
+
 .portfolio-modal .modal-content h2 {
   font-size: 3em;
   margin-bottom: 15px;
@@ -347,6 +351,7 @@ header.masthead .intro-text .intro-heading {
 
 .portfolio-modal .modal-content button {
   cursor: pointer;
+  align-items: center;
 }
 
 .portfolio-modal .close-modal {
@@ -385,6 +390,10 @@ header.masthead .intro-text .intro-heading {
 }
 
 .project-link {
+  text-align: center!important;
+}
+
+.repo-link {
   text-align: center!important;
 }
 
